# simulation

./: .gitignore  README.md  pyproject.toml  script.py
app/: main.py
src/customers/: generater.py
